# code_review_mittal

./: .env  .env.example  .gitignore  README.md  app.py  codesage-architecture.mermaid  codesage-comparison.mermaid  index.html  mydiagram.d2  pyproject.toml  requirements.txt  run.sh  testplan.md
api/: auth.py  dashboard.py  github_webhook.py  session.py
landing/client/: index.html
landing/client/src/: index.css
landing/client/src/components/: ArchitectureDiagram.tsx  ContactSection.tsx  EvolutionSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  PricingSection.tsx  Terminal.tsx  WorkflowSection.tsx
landing/client/src/components/ui/: badge.tsx  button.tsx  input.tsx  textarea.tsx
landing/client/src/lib/: utils.ts
landing/client/src/pages/: Home.tsx
landing/server/: routes.ts
landing/shared/: schema.ts
services/: github_service.py  llm_service.py
templates/: dashboard.html  login.html  review_details.html
tests/: README.md  conftest.py
tests/integration/: test_pr_processing.py
tests/unit/: test_feedback_generator.py  test_github_webhook.py  test_llm_service.py
