[tool.poetry]
name = "codesage"
version = "0.1.0"
description = "AI-powered code review platform"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "api"},
    {include = "services"}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
openai = "^1.0.0"
httpx = "^0.25.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
